# miniJVM

./: .gitignore
binary/: build_mac_linux.sh
j2c/app/vm/: miniz.c  native_lwjgl.c
minijvm/c/: CMakeLists.txt  main.c
minijvm/c/jvm/: class_load.c  glut_keys.h  interpreter.c  jni_awt.c  jni_io.c  jni_lwjgl.c  jni_lwjgl_input.c  jni_lwjgl_platform_sdl1.c  jni_std.c  jvm.c  jvm.h  jvm_util.c  mipmaps.h
minijvm/c/utils/: d_type.h  miniz.h  tinycthread.c
minijvm/c/utils/sljit/: sljitConfig.h  sljitUtils.c
minijvm/java/src/main/java/java/applet/: Applet.java
minijvm/java/src/main/java/java/awt/: AWTException.java  BorderLayout.java  Canvas.java  Color.java  Component.java  Dimension.java  Frame.java  Graphics.java  LayoutManager.java  MouseInfo.java  Panel.java  Point.java  PointerInfo.java  Robot.java
minijvm/java/src/main/java/java/awt/event/: WindowAdapter.java  WindowListener.java
minijvm/java/src/main/java/java/awt/image/: DataBufferInt.java  WritableRaster.java
minijvm/java/src/main/java/java/net/: HttpURLConnection.java
minijvm/java/src/main/java/java/nio/: ByteBufferImpl.java  CharBuffer.java  DoubleBuffer.java  FloatBuffer.java  IntBuffer.java  LongBuffer.java  ShortBuffer.java
minijvm/java/src/main/java/java/nio/channels/: SocketChannel.java
minijvm/java/src/main/java/java/text/: DecimalFormat.java
minijvm/java/src/main/java/javax/sound/midi/: MetaEventListener.java
minijvm/java/src/main/java/javax/sound/sampled/: AudioFormat.java  AudioSystem.java  Mixer.java  SourceDataLine.java
minijvm/java/src/main/java/javax/swing/: UIManager.java
minijvm/java/src/main/java/org/lwjgl/: LWJGLException.java  Sys.java
minijvm/java/src/main/java/org/lwjgl/input/: Controllers.java  Cursor.java  Mouse.java
minijvm/java/src/main/java/org/lwjgl/openal/: AL.java  AL10.java
minijvm/java/src/main/java/org/lwjgl/opengl/: ARBVertexBufferObject.java  ContextCapabilities.java  Display.java  GL11.java  GLContext.java
minijvm/java/src/main/java/org/mini/fs/: FileSystemImpl.java  FileSystemPosix.java
test/minijvm_test/src/main/java/test/: LWJGL2.java
